--- a/src/ui/calendar/calendar.css
+++ b/src/ui/calendar/calendar.css
@@ -22,6 +22,18 @@
 
 }
 
+.weekEvent {
+    background-color: #3174ad;
+    border-radius: 5px;
+    padding: 2px 5px;
+}
+.weekEventDate {
+    color: white;
+}
+.weekEventText {
+    color: white;
+}
+
 .emptySlot {
     border-top: 1px solid #f7f7f7;
 }
