--- a/src/app/repository/overview/overview.component.html
+++ b/src/app/repository/overview/overview.component.html
@@ -1,3 +1,6 @@
 <p>
-  overview works!
+  overview works! {{repositories.length}}
+</p>
+<p *ngFor="let repo of repositories">
+  {{ repo.name }}
 </p>
