--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,3 +17,4 @@
 
 
 <button type="text" (click)="sideBarVisible = !sideBarVisible" pButton icon="pi pi-plus" label="Show"></button>
+<button type="text" (click)="this.createDummyData()" pButton icon="pi pi-plus" label="Create dummy data"></button>
