--- a/src/app/repository/overview/overview.component.html
+++ b/src/app/repository/overview/overview.component.html
@@ -1,12 +1,23 @@
 <h1>Repositories</h1>
-<p-dialog [positionTop]="100" [focusOnShow]="false" [modal]="true" header="Login into repository {{repoToLogin?.name}}" [(visible)]="showLoginDialog">
 
-  <input #pw type="password" pPassword  (keyup.enter)="this.openRepo(pw.value)" [feedback]="false"/>
-  <button pButton type="button" label="Primary" class="ui-button-rounded" (click)="this.openRepo(pw.value)">Login</button>
+<p-toast key="loginMsgs"></p-toast>
+
+<p-dialog
+  [positionTop]="100" [focusOnShow]="false" [modal]="true" header="Login into repository {{repoToLogin?.name}}"
+  [(visible)]="showLoginDialog">
+
+  <input #pw type="password" pPassword (keyup.enter)="this.openRepo(pw.value)" [feedback]="false"/>
+  <button pButton type="button" label="Login" (click)="this.openRepo(pw.value)">
+  </button>
 </p-dialog>
+
+<app-add-repo-short></app-add-repo-short>
+
 <p *ngFor="let repo of repositories">
   <p-card title={{repo.name}}>
-    <button *ngIf="!repo.isOpen()" pButton type="button" label="Primary" class="ui-button-rounded" (click)="this.loginRepo(repo)">Login</button>
-    <button *ngIf="repo.isOpen()" pButton type="button" label="Primary" class="ui-button-rounded" (click)="this.logoutRepo(repo)">Logout</button>
+    <p-button *ngIf="!repo.isOpen()" icon="fa fa-lock-open" type="button" (click)="this.loginRepo(repo)" label="Login" >
+    </p-button>
+    <p-button *ngIf="repo.isOpen()" icon="fa fa-lock" type="button" (click)="this.logoutRepo(repo)" label="Logout">
+    </p-button>
   </p-card>
 </p>
