added spinner and block ui and create repo callback

--- a/src/app/repository/add-short/add-short.component.html
+++ b/src/app/repository/add-short/add-short.component.html
@@ -1,3 +1,5 @@
+
+<p-blockUI [blocked]="creating"></p-blockUI>
 <form [formGroup]="addForm">
   <p-card title="Add repository">
     <br/>
@@ -20,6 +22,9 @@
         </div>
         <div class="p-col">
           <p-button type="button" icon="pi pi-plus" (click)="this.createRepo(name.value, pw.value)" label="Create"></p-button>
+        </div>
+        <div class="p-col">
+          <p-progressSpinner *ngIf="creating"></p-progressSpinner>
         </div>
       </div>
     </div>
