start with thoughtoverview

--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -5,7 +5,7 @@
     <fa-icon [icon]="homeIcon" class="fa-3x"></fa-icon>
     <br/>
   </a>
-  <a routerLink="/inbox" routerLinkActive="NavLinkActive" class="NavLink" pTooltip="Inbox">
+  <a routerLink="/thought" routerLinkActive="NavLinkActive" class="NavLink" pTooltip="Inbox">
     <fa-icon [icon]="inboxIcon" class="fa-3x"></fa-icon>
     <br/>
   </a>
