--- a/src/app/thought/thought-overview/thought-overview.component.html
+++ b/src/app/thought/thought-overview/thought-overview.component.html
@@ -1,29 +1,61 @@
-<h1>Thoughts</h1>
+<div class="p-grid">
+  <div class="p-col">
+    <h1>Thoughts</h1>
+  </div>
+  <div class="p-col-fixed" style="width: 7em">
+    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new thought" style="width: 5em; height: 2.5em; margin-top: 27px" (click)="this.addThought()"></button>
+  </div>
+</div>
+
+
+<p-dialog
+  [positionTop]="100" [focusOnShow]="true" [modal]="true" header="Postpone thought {{selectedThought?.name}}"
+  [(visible)]="showPostponeDialog">
+
+
+  <input #time type="text" pInputText value="7"/>
+  <button pButton type="button" label="Postpone" (click)="this.postpone(time.value)">
+  </button>
+</p-dialog>
 
 
 <div class="p-grid">
   <div class="p-col">
-  <p-table [value]="thoughts" [rowHover]="true">
-    <ng-template pTemplate="header">
-      <tr>
-        <th>Created</th>
-        <th>Name</th>
-        <th>Repository</th>
-        <th>Action</th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-thought>
-      <tr (mouseover)="this.showPreview(thought)">
-        <td>{{thought.created | date: "short"}}</td>
-        <td>{{thought.name}}</td>
-        <td>{{thought.repository | repositoryName}}</td>
-        <td>
-          <p-button label="To Task"></p-button>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+    <p-table [value]="thoughts" [rowHover]="true">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Created</th>
+          <th>Name</th>
+          <th>Repository</th>
+          <th>Action</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-thought>
+        <tr (mouseover)="this.showPreview(thought)">
+          <td>{{thought.updated | date: "short"}}</td>
+          <td>{{thought.name}}</td>
+          <td>{{thought.repository | repositoryName}}</td>
+          <td>
+            <div class="p-grid">
+              <div class="p-col ActionButton">
+                <button pButton type="button" icon="fa fa-clipboard-list" pTooltip="To Task" (click)="this.thoughtToTask()"></button>
+              </div>
+              <div class="p-col ActionButton">
+                <button pButton type="button" icon="fa fa-book" pTooltip="To Document" class="ui-button-info" (click)="this.thoughtToDoc()"></button>
+              </div>
+              <div class="p-col ActionButton">
+                <button pButton type="button" icon="fa fa-hourglass-start" pTooltip="Postpone" class="ui-button-secondary" (click)="showPostponeDialog =true"></button>
+              </div>
+              <div class="p-col ActionButton">
+                <button pButton type="button" icon="fa fa-trash" pTooltip="Delete" class="ui-button-danger" (click)="this.delete()"></button>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
   </div>
-  <div class="p-col">
+  <div class="p-col PaddingTop">
+    <app-thought-preview *ngIf="selectedThought" [thought]="selectedThought" (onDelete)="this.delete($event)" (onDocument)="this.thoughtToDoc()" (onTask)="this.thoughtToTask()" (onPostpone)="showPostponeDialog=true"></app-thought-preview>
   </div>
 </div>
