remade markdown editor, removed task context finished adding thoughts

--- a/src/app/markdown/markdown-editor/markdown-editor.component.html
+++ b/src/app/markdown/markdown-editor/markdown-editor.component.html
@@ -1,10 +1,2 @@
-<ngx-codemirror
-  #codeEditor
-  [ngModel]="content"
-  (ngModelChange)="inputChanged($event)"
-  [options]="{
-    lineNumbers: true,
-    theme: 'monokai',
-    mode: 'markdown'
-  }"
-></ngx-codemirror>
+<textarea #textArea>
+</textarea>
