--- a/src/app/thought/add-thought/add-thought.component.html
+++ b/src/app/thought/add-thought/add-thought.component.html
@@ -1,5 +1,6 @@
 <h1>Add thought</h1>
 
+<p-blockUI [blocked]="creating"></p-blockUI>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="p-grid">
     <div class="p-col">
@@ -8,10 +9,32 @@
               <label for="float-name">Name</label>
        </span>
     </div>
+    <div class="p-col">
+      <p-message severity="error" text="Firstname is required" *ngIf="!form.controls['name'].valid&&form.controls['name'].dirty"></p-message>
+    </div>
   </div>
   <div class="p-grid">
     <div class="p-col">
-      <app-tag-input label="Tags" [parentFormControl]="tagsControl" [originalTags]="tagsControl.value" (selectedTags)="this.setTags($event)"></app-tag-input>
+       <span class="ui-float-label">
+              <input #name id="float-postpone" type="number" size="50" pInputText formControlName="postpone" style="width: 267px">
+              <label for="float-postpone">Postpone {{form.get('postpone').value || 'N'}} days</label>
+       </span>
+    </div>
+    <div class="p-col">
+      <p-message severity="error" text="Must be a number of days >=0" *ngIf="!form.controls['postpone'].valid&&form.controls['postpone'].dirty"></p-message>
+    </div>
+  </div>
+  <div class="p-grid">
+    <div class="p-col">
+      <app-tag-input label="Tags" [parentFormControl]="tagsControl" [originalTags]="tagsControl.value"></app-tag-input>
+    </div>
+  </div>
+  <div class="p-grid">
+    <div class="p-col">
+      <app-repository-selector label="Repository" [parentFormControl]="form.get('repository')"></app-repository-selector>
+    </div>
+    <div class="p-col">
+      <p-message severity="error" text="Repository is required" *ngIf="!form.controls['repository'].valid&&form.controls['repository'].dirty"></p-message>
     </div>
   </div>
   <div class="p-grid">
@@ -21,7 +44,7 @@
   </div>
   <div class="p-grid">
     <div class="p-col">
-      <button pButton type="button" label="Submit" (click)="onSubmit()" class="ui-button-info"></button>
+      <button pButton type="button" label="Submit" (click)="onSubmit()" class="ui-button-info" [disabled]="!form.valid"></button>
     </div>
   </div>
 </form>
