added thought filter

--- a/src/app/thought/thought-overview/thought-overview.component.html
+++ b/src/app/thought/thought-overview/thought-overview.component.html
@@ -18,9 +18,9 @@
   </button>
 </p-dialog>
 
-
 <div class="p-grid">
   <div class="p-col">
+    <app-thought-filter (filter)="onFilter($event)"></app-thought-filter>
     <p-table [value]="thoughts" [rowHover]="true">
       <ng-template pTemplate="header">
         <tr>
