--- a/src/app/document/idnadrev-file-filter/idnadrev-file-filter.component.html
+++ b/src/app/document/idnadrev-file-filter/idnadrev-file-filter.component.html
@@ -16,6 +16,12 @@
        </span>
     </div>
     <div class="p-col">
+      <span class="ui-float-label">
+        <p-dropdown id="typeSelection" [options]="types" formControlName="type"></p-dropdown>
+        <label for="typeSelection">File Type</label>
+       </span>
+    </div>
+    <div class="p-col">
       <button pButton type="button" icon="fa fa-times-circle" (click)="onReset()"></button>
     </div>
   </div>
