--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -9,11 +9,11 @@
     <fa-icon [icon]="inboxIcon" class="fa-3x"></fa-icon>
     <br/>
   </a>
-  <a routerLink="/tasks" routerLinkActive="active" class="NavLink" pTooltip="Tasks">
+  <a routerLink="/task" routerLinkActive="active" class="NavLink" pTooltip="Tasks">
     <fa-icon [icon]="tasksIcon" class="fa-3x"></fa-icon>
     <br/>
   </a>
-  <a routerLink="/docs" routerLinkActive="active" class="NavLink" pTooltip="Documents">
+  <a routerLink="/doc" routerLinkActive="active" class="NavLink" pTooltip="Documents">
     <fa-icon [icon]="docsIcon" class="fa-3x"></fa-icon>
     <br/>
   </a>
