file type filter fixed

--- a/src/app/document/document-overview/document-overview.component.html
+++ b/src/app/document/document-overview/document-overview.component.html
@@ -15,6 +15,7 @@
         <tr>
           <th>Created</th>
           <th>Name</th>
+          <th>Type</th>
           <th>Repository</th>
         </tr>
       </ng-template>
@@ -22,6 +23,7 @@
         <tr (mouseover)="this.showPreview(file)">
           <td>{{file.updated | date: "short"}}</td>
           <td>{{file.name}}</td>
+          <td>{{file.fileType}}</td>
           <td>{{file.repository | repositoryName}}</td>
         </tr>
       </ng-template>
