added indnadrev file preview for doc overview

--- a/src/app/task/task-preview/task-preview.component.html
+++ b/src/app/task/task-preview/task-preview.component.html
@@ -2,17 +2,17 @@
   <p-header>
     <div class="p-grid">
       <div class="p-col-6">
-        <span class="Title ui-card-title">{{doc.name}}</span>
+        <span class="Title ui-card-title">{{task.name}}</span>
       </div>
       <div class="p-col-6">
-        <span>{{doc.updated | date: "short"}}</span>
+        <span>{{task.updated | date: "short"}}</span>
       </div>
       <div class="p-col" style="padding-left: 15px">
-        <app-tagview [tags]="doc.tags"></app-tagview>
+        <app-tagview [tags]="task.tags"></app-tagview>
       </div>
     </div>
   </p-header>
-  <app-markdown-viewer [markdown]="doc.content"></app-markdown-viewer>
+  <app-markdown-viewer [markdown]="task.content"></app-markdown-viewer>
   <p-footer>
     <div class="p-grid">
       <div class="p-col">
