--- a/src/app/thought/add-thought/add-thought.component.html
+++ b/src/app/thought/add-thought/add-thought.component.html
@@ -10,7 +10,7 @@
        </span>
     </div>
     <div class="p-col">
-      <p-message severity="error" text="Firstname is required" *ngIf="!form.controls['name'].valid&&form.controls['name'].dirty"></p-message>
+      <p-message severity="error" text="Name is required" *ngIf="!form.controls['name'].valid&&form.controls['name'].dirty"></p-message>
     </div>
   </div>
   <div class="p-grid">
