link to add task

--- a/src/app/task/task-overview/task-overview.component.html
+++ b/src/app/task/task-overview/task-overview.component.html
@@ -3,7 +3,7 @@
     <h1>Tasks</h1>
   </div>
   <div class="p-col-fixed" style="width: 7em">
-    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new document" style="width: 5em; height: 2.5em; margin-top: 27px" (click)="this.addDoc()"></button>
+    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new task" style="width: 5em; height: 2.5em; margin-top: 27px" (click)="this.addTask()"></button>
   </div>
 </div>
 
