fixed sizes of inputs

--- a/src/app/document/add-document/add-document.component.html
+++ b/src/app/document/add-document/add-document.component.html
@@ -5,7 +5,7 @@
   <div class="p-grid">
     <div class="p-col FloatLabelInput">
        <span class="ui-float-label">
-              <input #name id="float-name" type="text" size="30" pInputText formControlName="name">
+              <input #name id="float-name" type="text" class="FormInput" pInputText formControlName="name">
               <label for="float-name">Name</label>
        </span>
     </div>
